--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -9,7 +9,8 @@
                                 <i class="fa fa-plane"></i>
                             </div>
                             <div class="datas-text pull-right">
-                                <span class="bold">May 18 - 19, 2015</span>Castle Resort, Neverland</div>
+                                <span class="bold">May 18 - 19, 2015</span>Castle Resort, Neverland
+                            </div>
                             <div class="clearfix"></div>
                         </li>
                         <li class="borange">
@@ -17,7 +18,8 @@
                                 <i class="fa fa-envelope"></i>
                             </div>
                             <div class="datas-text pull-right">
-                                <span class="bold">{{vm.messageCount}}</span>Messages</div>
+                                <span class="bold">{{vm.messageCount}}</span>Messages
+                            </div>
                             <div class="clearfix"></div>
                         </li>
                         <li class="bgreen">
@@ -25,7 +27,8 @@
                                 <i class="fa fa-envelope"></i>
                             </div>
                             <div class="datas-text pull-right">
-                                <span class="bold">{{vm.messageCount}}</span>Messages</div>
+                                <span class="bold">{{vm.messageCount}}</span>Messages
+                            </div>
                             <div class="clearfix"></div>
                         </li>
                     </ul>
@@ -33,27 +36,35 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
+                    <div class="widget wblue">
+                        <div ht-widget-header
+                             title="sub-widget &copy; ase, 2015, vie - AT // @ {{vm.news.date}}"
+                             allow-collapse="true"></div>
+                        <div class="widget-content text-center text-info">
+                            {{vm.news.description}}
+                        </div>
+                    </div>
                     <div class="widget wviolet">
                         <div ht-widget-header title="People" allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
                             <table class="table table-condensed table-striped">
                                 <thead>
-                                    <tr>
-                                        <th>First Name</th>
-                                        <th>Last Name</th>
-                                        <th>Age</th>
-                                        <th>Location</th>
-                                        <th>Updated</th>
-                                    </tr>
+                                <tr>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Age</th>
+                                    <th>Location</th>
+                                    <th>Updated</th>
+                                </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="p in vm.people">
-                                        <td>{{p.firstName}}</td>
-                                        <td>{{p.lastName}}</td>
-                                        <td>{{p.age}}</td>
-                                        <td>{{p.location}}</td>
-                                        <td>{{p.updatedAt}}</td>
-                                    </tr>
+                                <tr ng-repeat="p in vm.people">
+                                    <td>{{p.firstName}}</td>
+                                    <td>{{p.lastName}}</td>
+                                    <td>{{p.age}}</td>
+                                    <td>{{p.location}}</td>
+                                    <td>{{p.updatedAt}}</td>
+                                </tr>
                                 </tbody>
                             </table>
                         </div>
