interact debug session w/ chrome mapped to fs

--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -27,7 +27,7 @@
                                 <i class="fa fa-envelope"></i>
                             </div>
                             <div class="datas-text pull-right">
-                                <span class="bold">{{vm.messageCount}}</span>Messages
+                                <span class="bold">{{vm.bears.length}}</span>Bears
                             </div>
                             <div class="clearfix"></div>
                         </li>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="widget wblue">
                         <div ht-widget-header
                              title="sub-widget &copy; ase, 2015, vie - AT // @ {{vm.news.date}}"
