--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <section class="matter">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-4">
                     <ul class="today-datas">
                         <li class="blightblue">
                             <div class="pull-left">
@@ -33,49 +33,98 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-4">
-                    <div class="widget wblue">
-                        <div ht-widget-header
-                             title="sub-widget &copy; ase, 2015, vie - AT // @ {{vm.news.date}}"
-                             allow-collapse="true"></div>
+                    <div class="widget wgreen">
+                        <div ht-widget-header title="{{vm.news.title}}
+                         @ {{vm.news.date}}" allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
-                            {{vm.news.description}}
+                            <small>{{vm.news.description}}</small>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="widget wred">
+                        <div ht-widget-header title="sub-widget &copy; ase, 2015, vie - AT //
+                         @ {{vm.news.date}}" allow-collapse="true"></div>
+                        <div class="widget-content text-left text-info">
+                            <h4>{{vm.news.description}}</h4>
+                            <h4>Bears: {{vm.bears.length}}</h4>
+                            <h4>People: {{vm.people.length}}</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class='row'>
+                <div class="col-md-5">
+                    <div class="widget wblue">
+                        <div ht-widget-header title="Bears" allow-collapse="true"></div>
+                        <div class="widget-content text-center text-info">
+                            <table class="table table-condensed table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Last Name</th>
+                                        <th>Age</th>
+                                        <th>Location</th>
+                                        <th>Created</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="p in vm.bears">
+                                        <td>{{p._id}}</td>
+                                        <td>{{p.name}}</td>
+                                        <td>n/a</td>
+                                        <td>n/a</td>
+                                        <td>{{p.created_at}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="widget-foot">
+                            <div class="clearfix">eob</div>
+                        </div>
+                    </div>
+                </div>
+                <div class='col-md-6'>
                     <div class="widget wviolet">
                         <div ht-widget-header title="People" allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
                             <table class="table table-condensed table-striped">
                                 <thead>
-                                <tr>
-                                    <th>First Name</th>
-                                    <th>Last Name</th>
-                                    <th>Age</th>
-                                    <th>Location</th>
-                                    <th>Updated</th>
-                                </tr>
+                                    <tr>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
+                                        <th>Age</th>
+                                        <th>Location</th>
+                                        <th>Updated</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
-                                <tr ng-repeat="p in vm.people">
-                                    <td>{{p.firstName}}</td>
-                                    <td>{{p.lastName}}</td>
-                                    <td>{{p.age}}</td>
-                                    <td>{{p.location}}</td>
-                                    <td>{{p.updatedAt}}</td>
-                                </tr>
+                                    <tr ng-repeat="p in vm.people">
+                                        <td>{{p.firstName}}</td>
+                                        <td>{{p.lastName}}</td>
+                                        <td>{{p.age}}</td>
+                                        <td>{{p.location}}</td>
+                                        <td>{{p.updatedAt}}</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
                         <div class="widget-foot">
-                            <div class="clearfix"></div>
+                            <div class="clearfix">eop</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="widget wgreen">
-                        <div ht-widget-header title="{{vm.news.title}}" allow-collapse="true"></div>
+            </div>
+
+            <div class='row'>
+                <div class='col-md-6'>
+                    <div class="widget wblue">
+                        <div ht-widget-header title="sub-widget &copy; ase, 2015, vie - AT // @ {{vm.news.date}}" allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
                             <small>{{vm.news.description}}</small>
                         </div>
