--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -3,35 +3,46 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <ul class="today-datas">
-                        <li class="blightblue">
-                            <div class="pull-left">
-                                <i class="fa fa-plane"></i>
-                            </div>
-                            <div class="datas-text pull-right">
-                                <span class="bold">May 18 - 19, 2015</span>Castle Resort, Neverland
-                            </div>
-                            <div class="clearfix"></div>
-                        </li>
-                        <li class="borange">
-                            <div class="pull-left">
-                                <i class="fa fa-envelope"></i>
-                            </div>
-                            <div class="datas-text pull-right">
-                                <span class="bold">{{vm.messageCount}}</span>Messages
-                            </div>
-                            <div class="clearfix"></div>
-                        </li>
-                        <li class="bgreen">
-                            <div class="pull-left">
-                                <i class="fa fa-envelope"></i>
-                            </div>
-                            <div class="datas-text pull-right">
-                                <span class="bold">{{vm.bears.length}}</span>Bears
-                            </div>
-                            <div class="clearfix"></div>
-                        </li>
-                    </ul>
+                    <div class="widget wblue">
+                        <ul class="today-datas">
+                            <li class="blightblue">
+                                <div class="pull-left">
+                                    <i class="fa fa-plane"></i>
+                                </div>
+                                <div class="datas-text pull-right">
+                                    <span class="bold">May 18 - 19, 2017</span>Castle Resort, Neverland
+                                </div>
+                                <div class="clearfix"></div>
+                            </li>
+                            <li class="borange">
+                                <div class="pull-left">
+                                    <i class="fa fa-envelope"></i>
+                                </div>
+                                <div class="datas-text pull-right">
+                                    <span class="bold">{{vm.messageCount}}</span>Messages
+                                </div>
+                                <div class="clearfix"></div>
+                            </li>
+                            <li class="bgreen">
+                                <div class="pull-left">
+                                    <i class="fa fa-envelope"></i>
+                                </div>
+                                <div class="datas-text pull-right">
+                                    <span class="bold">{{vm.bearsLoaded}}</span>Bears
+                                </div>
+                                <div class="clearfix"></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="widget wgreen">
+                        <div ht-widget-header title="{{vm.news.title}}
+                         @ {{vm.news.date}}" allow-collapse="true"></div>
+                        <div class="widget-content text-center text-info">
+                            <small>{{vm.news.description}}</small>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <div class="widget wgreen">
@@ -45,7 +56,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-8 pull-right">
                     <div class="widget wred">
                         <div ht-widget-header title="sub-widget &copy; ase, 2015, vie - AT //
                          @ {{vm.news.date}}" allow-collapse="true"></div>
@@ -59,36 +70,6 @@
             </div>
 
             <div class='row'>
-                <div class="col-md-5">
-                    <div class="widget wblue">
-                        <div ht-widget-header title="Bears" allow-collapse="true"></div>
-                        <div class="widget-content text-center text-info">
-                            <table class="table table-condensed table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Last Name</th>
-                                        <th>Age</th>
-                                        <th>Location</th>
-                                        <th>Created</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr ng-repeat="p in vm.bears">
-                                        <td>{{p._id}}</td>
-                                        <td>{{p.name}}</td>
-                                        <td>n/a</td>
-                                        <td>n/a</td>
-                                        <td>{{p.created_at}}</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="widget-foot">
-                            <div class="clearfix">eob</div>
-                        </div>
-                    </div>
-                </div>
                 <div class='col-md-6'>
                     <div class="widget wviolet">
                         <div ht-widget-header title="People" allow-collapse="true"></div>
@@ -116,6 +97,36 @@
                         </div>
                         <div class="widget-foot">
                             <div class="clearfix">eop</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="widget wblue">
+                        <div ht-widget-header title="Bears" allow-collapse="true"></div>
+                        <div class="widget-content text-center text-info">
+                            <table class="table table-condensed table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Last Name</th>
+                                        <th>Age</th>
+                                        <th>Location</th>
+                                        <th>Created</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="p in vm.bears">
+                                        <td>{{p._id}}</td>
+                                        <td>{{p.name}}</td>
+                                        <td>n/a</td>
+                                        <td>n/a</td>
+                                        <td>{{p.created_at}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="widget-foot">
+                            <div class="clearfix">eob</div>
                         </div>
                     </div>
                 </div>
