end of bears message, widget colors

--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -71,6 +71,15 @@
 
             <div class='row'>
                 <div class='col-md-6'>
+                    <div class="widget wlightblue">
+                        <div ht-widget-header title="sub-widget &copy; ase, 2015, vie - AT // @ {{vm.news.date}}" allow-collapse="true"></div>
+                        <div class="widget-content text-center text-info">
+                            <small>{{vm.news.description}}</small>
+                        </div>
+                        <div class="widget-foot">
+                            <div class="clearfix">eon</div>
+                        </div>
+                    </div>
                     <div class="widget wviolet">
                         <div ht-widget-header title="People" allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
@@ -126,21 +135,21 @@
                             </table>
                         </div>
                         <div class="widget-foot">
-                            <div class="clearfix">eob</div>
+                            <div class="clearfix">eob, bearStatus: {{vm.bearStatus}}</div>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class='row'>
-                <div class='col-md-6'>
-                    <div class="widget wblue">
+                <div class='col-md-12'>
+                    <div class="widget worange">
                         <div ht-widget-header title="sub-widget &copy; ase, 2015, vie - AT // @ {{vm.news.date}}" allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
                             <small>{{vm.news.description}}</small>
                         </div>
                         <div class="widget-foot">
-                            <div class="clearfix"></div>
+                            <div class="clearfix">eon</div>
                         </div>
                     </div>
                 </div>
