--- a/src/client/index.html
+++ b/src/client/index.html
@@ -75,6 +75,7 @@
 <script src="/src/client/app/blocks/router/router.module.js"></script>
 <script src="/src/client/app/core/core.module.js"></script>
 <script src="/src/client/app/dashboard/dashboard.module.js"></script>
+<script src="/src/client/app/db-service/db-service.module.js"></script>
 <script src="/src/client/app/layout/layout.module.js"></script>
 <script src="/src/client/app/widgets/widgets.module.js"></script>
 <script src="/src/client/app/admin/admin.controller.js"></script>
@@ -88,7 +89,9 @@
 <script src="/src/client/app/core/core.route.js"></script>
 <script src="/src/client/app/core/dataservice.js"></script>
 <script src="/src/client/app/dashboard/dashboard.controller.js"></script>
+<script src="/src/client/app/db-service/db-service.controller.js"></script>
 <script src="/src/client/app/dashboard/dashboard.route.js"></script>
+<script src="/src/client/app/db-service/db-service.route.js"></script>
 <script src="/src/client/app/layout/ht-sidebar.directive.js"></script>
 <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
 <script src="/src/client/app/layout/shell.controller.js"></script>
