--- a/src/client/specs.html
+++ b/src/client/specs.html
@@ -69,6 +69,7 @@
     <script src="/src/client/app/blocks/router/router.module.js"></script>
     <script src="/src/client/app/core/core.module.js"></script>
     <script src="/src/client/app/dashboard/dashboard.module.js"></script>
+    <script src="/src/client/app/db-service/db-service.module.js"></script>
     <script src="/src/client/app/layout/layout.module.js"></script>
     <script src="/src/client/app/widgets/widgets.module.js"></script>
     <script src="/src/client/app/admin/admin.controller.js"></script>
@@ -83,6 +84,8 @@
     <script src="/src/client/app/core/dataservice.js"></script>
     <script src="/src/client/app/dashboard/dashboard.controller.js"></script>
     <script src="/src/client/app/dashboard/dashboard.route.js"></script>
+    <script src="/src/client/app/db-service/db-service.controller.js"></script>
+    <script src="/src/client/app/db-service/db-service.route.js"></script>
     <script src="/src/client/app/layout/ht-sidebar.directive.js"></script>
     <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
     <script src="/src/client/app/layout/shell.controller.js"></script>
@@ -103,6 +106,8 @@
     <script src="/src/client/app/core/core.route.spec.js"></script>
     <script src="/src/client/app/dashboard/dashboard.controller.spec.js"></script>
     <script src="/src/client/app/dashboard/dashboard.route.spec.js"></script>
+    <script src="/src/client/app/db-service/db-service.controller.spec.js"></script>
+    <script src="/src/client/app/db-service/db-service.route.spec.js"></script>
     <script src="/src/client/app/layout/ht-sidebar.directive.spec.js"></script>
     <script src="/src/client/app/layout/shell.controller.spec.js"></script>
     <script src="/src/client/app/layout/sidebar.controller.spec.js"></script>
