interface testing mit netbeans Signed-off-by:rogera <wolfgang.schuessel@gmail.com>

--- a/report/plato/files/__src_client_app_layout_shell_controller_js/index.html
+++ b/report/plato/files/__src_client_app_layout_shell_controller_js/index.html
@@ -105,8 +105,8 @@
         $rootScope.showSplash = true;
         vm.navline = {
             title: config.appTitle,
-            text: &#039;Created by John Papa&#039;,
-            link: &#039;http://twitter.com/john_papa&#039;
+            text: &#039;@rogeraaut; h/t john papa&#039;,
+            link: &#039;http://twitter.com/rogeraaut&#039;
         };
 
         activate();
@@ -120,7 +120,7 @@
             //Force a 1 second delay so we can see the splash.
             $timeout(function() {
                 $rootScope.showSplash = false;
-            }, 1000);
+            }, 250);
         }
     }
 })();</textarea>
